# bareASGI-prometheus

./: README.md  mkdocs.yml  mypy.ini  pyproject.toml
3.7/: 404.html  index.html
3.7/api/bareasgi_prometheus/: index.html
3.7/user-guide/installation/: index.html
3.7/user-guide/usage/: index.html
4.0/: 404.html  index.html
4.0/api/bareasgi_prometheus/: index.html
4.0/user-guide/installation/: index.html
4.0/user-guide/usage/: index.html
bareasgi_prometheus/: __init__.py  helpers.py  middleware.py  monitors.py  view.py
bareasgi_prometheus/metrics/: __init__.py  http_request_metric.py  prometheus_http_request_metric.py
docs/: 404.html  index.html
docs/api/: bareasgi_prometheus.md
docs/api/bareasgi_prometheus/: index.html
docs/css/: custom.css
docs/search/: search_index.json
docs/user-guide/: usage.md
docs/user-guide/installation/: index.html
docs/user-guide/usage/: index.html
documentation/: index.md
documentation/api/: bareasgi_prometheus.md
documentation/user-guide/: installation.md
examples/: metrics.py
latest/api/bareasgi_prometheus/: index.html
stable/api/bareasgi_prometheus/: index.html
tests/: test_monitor.py
