[tool.poetry]
name = "bareASGI-prometheus"
version = "3.7.0"
description = "Prometheus metrics for bareASGI"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_prometheus" },
]
repository = "https://github.com/rob-blackbourn/bareASGI-prometheus"

[tool.poetry.dependencies]
python = "^3.7"
bareASGI = "^3"
prometheus_client = "^0.11"
jetblack-metrics = "^1"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
uvicorn = "^0.9"
hypercorn = "^0.9"
Sphinx = "^1.8"
sphinxcontrib-websupport = "^1.1"
pylint = "^2.9"
mypy = "^0.910"
mkdocs = "^1"
mkdocs-material = "^4"
jetblack-markdown = "^0.6"
autopep8 = "^1.5"
uvloop = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
